--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -11,6 +11,8 @@
 <h2>회원 가입</h2>
     <label for="login-id">아이디:</label><br>
     <input type="text" id="login-id" name="login-id" required><br><br>
+    <button type="button" id="check-loginId-button">중복 확인</button>
+    <span id="loginIdCheckMessage" class="validation-message error"></span><br><br>
 
     <label for="password">비밀번호:</label><br>
     <input type="password" id="password" name="password" required><br><br>
