--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -10,17 +10,17 @@
 <body>
 <h2>회원 가입</h2>
     <label for="login-id">아이디:</label><br>
-    <input type="text" id="login-id" name="login-id" required><br>
+    <input type="text" id="login-id" name="login-id"><br>
     <button type="button" id="check-loginId-button">중복 확인</button><br><br>
 
     <label for="password">비밀번호:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
+    <input type="password" id="password" name="password"><br><br>
 
     <label for="confirm-password">비밀번호 확인 : </label><br>
-    <input type="password" id="confirm-password" name="confirm-password" required><br><br>
+    <input type="password" id="confirm-password" name="confirm-password"><br><br>
 
     <label for="name">이름:</label><br>
-    <input type="text" id="name" name="name" required><br><br>
+    <input type="text" id="name" name="name"><br><br>
 
     <label for="gender">성별:</label><br>
     <select id="gender" name="gender">
@@ -29,16 +29,16 @@
     </select><br><br>
 
     <label for="birthdate">생일:</label><br>
-    <input type="date" id="birthdate" name="birthdate" required><br><br>
+    <input type="date" id="birthdate" name="birthdate"><br><br>
 
     <label for="email">이메일:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
+    <input type="email" id="email" name="email"><br><br>
 
     <label for="phone-number">전화번호:</label><br>
-    <input type="tel" id="phone-number" name="phone-number" required><br><br>
+    <input type="tel" id="phone-number" name="phone-number"><br><br>
 
     <label for="address">주소:</label><br>
-    <input type="text" id="address" name="address" required><br><br>
+    <input type="text" id="address" name="address"><br><br>
 
     <button onclick="register()">회원 가입</button>
 
