--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -33,6 +33,21 @@
 
     <label for="email">이메일:</label><br>
     <input type="email" id="email" name="email"><br><br>
+    <button onclick="validateEmailDuplicate()">중복 확인</button>
+    <span id="emailCheckMessage" class="validation-message error"></span><br>
+    <button onclick="sendCodeButton()">인증 코드 발송</button><br><br>
+
+    <!-- 로딩 스피너 추가 -->
+    <div id="loading-spinner" style="display:none;">
+        <img src="/css/user/loading-waiting.gif" alt="Loading..."> <!-- spinner.gif 파일을 로딩 스피너로 사용 -->
+    </div>
+
+    <div id="verifyCodeSection">
+        <label for="verificationCode">인증 코드</label><br>
+        <input type="text" id="verificationCode" name="verificationCode" placeholder="인증번호 입력">
+        <button onclick="verifyCodeButton()">인증 확인</button>
+        <span id="verificationMessage" class="validation-message"></span>
+    </div><br>
 
     <label for="phone-number">전화번호:</label><br>
     <input type="tel" id="phone-number" name="phone-number"><br><br>
