--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -32,7 +32,7 @@
     <input type="date" id="birthdate" name="birthdate"><br><br>
 
     <label for="email">이메일:</label><br>
-    <input type="email" id="email" name="email"><br><br>
+    <input type="email" id="email" name="email"><br>
     <button onclick="validateEmailDuplicate()">중복 확인</button>
     <span id="emailCheckMessage" class="validation-message error"></span><br>
     <button onclick="sendCodeButton()">인증 코드 발송</button><br><br>
@@ -50,10 +50,11 @@
     </div><br>
 
     <label for="phone-number">전화번호:</label><br>
-    <input type="tel" id="phone-number" name="phone-number"><br><br>
+    <input type="tel" id="phone-number" name="phone-number"><br>
+    <button onclick="validatePhoneNumber()">중복 확인</button><br><br>
 
     <label for="address">주소:</label><br>
-    <input type="text" id="address" name="address"><br><br>
+    <input type="text" id="address" name="address"><br>
 
     <button onclick="register()">회원 가입</button>
 
