--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -7,6 +7,7 @@
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/user/register.js"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <body>
 <h2>회원 가입</h2>
     <label for="login-id">아이디:</label><br>
@@ -53,8 +54,17 @@
     <input type="tel" id="phone-number" name="phone-number"><br>
     <button onclick="validatePhoneNumber()">중복 확인</button><br><br>
 
+    <!-- 주소검색 -->
     <label for="address">주소:</label><br>
-    <input type="text" id="address" name="address"><br>
+    <input type="text" id="address" name="address" placeholder="주소"><br>
+
+    <label for="detail-address"></label>
+    <input type="text" id="detail-address" placeholder="상세주소"><br>
+
+    <label for="postcode"></label>
+    <input type="text" id="postcode" placeholder="우편번호">
+    <input type="button" onclick="execDaumPostcode()" value="우편번호 찾기"><br><br>
+
 
     <button onclick="register()">회원 가입</button>
 
