250119 함수명 변경
searchPostcode 로 변경

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -63,7 +63,7 @@
 
     <label for="postcode"></label>
     <input type="text" id="postcode" placeholder="우편번호">
-    <input type="button" onclick="execDaumPostcode()" value="우편번호 찾기"><br><br>
+    <input type="button" onclick="searchPostcode()" value="우편번호 찾기"><br><br>
 
 
     <button onclick="register()">회원 가입</button>
