--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -55,15 +55,15 @@
     <button onclick="validatePhoneNumber()">중복 확인</button><br><br>
 
     <!-- 주소검색 -->
-    <label for="address">주소:</label><br>
-    <input type="text" id="address" name="address" placeholder="주소"><br>
+    <label for="postcode">주소:</label><br>
+    <input type="text" id="postcode" placeholder="우편번호" disabled>
+    <input type="button" onclick="searchPostcode()" value="우편번호 찾기">
+
+    <label for="address"></label><br>
+    <input type="text" id="address" name="address" placeholder="주소" disabled><br>
 
     <label for="detail-address"></label>
-    <input type="text" id="detail-address" placeholder="상세주소"><br>
-
-    <label for="postcode"></label>
-    <input type="text" id="postcode" placeholder="우편번호">
-    <input type="button" onclick="searchPostcode()" value="우편번호 찾기"><br><br>
+    <input type="text" id="detail-address" placeholder="상세주소"><br><br><br>
 
 
     <button onclick="register()">회원 가입</button>
