--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원 가입</title>
+    <title>회원가입 페이지</title>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/user/register.js"></script>
