--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -26,8 +26,8 @@
     </ul>
 
     <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/login';">Login</button>
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/register';">Sign-up</button>
+        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/login';">로그인</button>
+        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/register';">회원가입</button>
     </div>
 </header>
 <h2>회원 가입</h2>
