250119 스프링 시큐리티를 통한 로그인 구현

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -32,7 +32,7 @@
     </div>
 </header>
 <div>
-    <form id="loginForm" action="/api/auth/login" method="post" onsubmit="return validateForm()">
+    <form id="loginForm" action="/api/user/login" method="post" onsubmit="return validateForm()">
         <label for="loginId">아이디</label><br>
         <input type="text" id="loginId" name="loginId" placeholder="ID 입력"><br><br>
         <label for="password">비밀번호</label><br>
