--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,14 +23,19 @@
     </ul>
 
     <div class="col-md-3 text-end">
+        {{#login_user}}
+        <span>{{name}}님, 환영합니다!</span>
+        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/logout';">로그아웃</button>
+        {{/login_user}}
+
+        {{^login_user}}
         <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/login';">로그인</button>
         <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/register';">회원가입</button>
+        {{/login_user}}
     </div>
 </header>
 
-<div>
-    Home-Page
-</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
