--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
         {{#login_user}}
         <span>{{name}}님, 환영합니다!</span>
         <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/logout';">로그아웃</button>
+        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/change-password';">비밀번호 변경</button>
         {{/login_user}}
 
         {{^login_user}}
