--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,11 +22,11 @@
         <li><a href="#" class="nav-link px-2">4</a></li>
     </ul>
 
-    <div class="col-md-3 text-end">
+    <div class="d-flex align-items-center flex-wrap">
         {{#login_user}}
-        <span>{{name}}님, 환영합니다!</span>
+        <span class="me-3">{{name}}님, 환영합니다!</span>
         <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/logout';">로그아웃</button>
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/change-password';">비밀번호 변경</button>
+        <button type="button" class="btn btn-outline-primary" onclick="window.location.href='/user/change-password';">비밀번호 변경</button>
         {{/login_user}}
 
         {{^login_user}}
