250120 product 상품보기 화면 요청 추가

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -19,7 +19,7 @@
 
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2">1</a></li>
+        <li><a href="/product" class="nav-link px-2">상품 보기</a></li>
         <li><a href="#" class="nav-link px-2">2</a></li>
         <li><a href="#" class="nav-link px-2">3</a></li>
         <li><a href="#" class="nav-link px-2">4</a></li>
