--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -36,9 +36,10 @@
         <label for="loginId">아이디</label><br>
         <input type="text" id="loginId" name="loginId" placeholder="ID 입력"><br><br>
         <label for="password">비밀번호</label><br>
-        <input type="password" id="password" name="password" placeholder="Password 입력"><br>
+        <input type="password" id="password" name="password" placeholder="Password 입력"><br><br>
+        <label for="remember-me">로그인 상태 유지</label>
+        <input type="checkbox" id="remember-me" name="remember-me"><br>
 
-        <button id="reset_button" type="reset">초기화</button><br>
         <input type="submit" value="로그인">
         <input type="button" value="회원가입" onclick="$.sign_up()">
     </form>
