250120 상품 총 갯수 업데이트

--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -74,11 +74,16 @@
                 <option value="name">이름순</option>
             </select>
             <div class="btn-group" role="group">
-                <!-- 오름차순 버튼 -->
                 <button id="ascBtn" class="btn btn-outline-primary" data-order="asc">오름차순</button>
-                <!-- 내림차순 버튼 -->
                 <button id="descBtn" class="btn btn-outline-secondary" data-order="desc">내림차순</button>
             </div>
+        </div>
+    </div>
+
+    <!-- 상품 갯수 -->
+    <div class="row mb-4">
+        <div class="col-12">
+            <p id="product-count" class="text-center fw-bold">상품 갯수: 0</p>
         </div>
     </div>
 
@@ -88,7 +93,6 @@
 
     <!-- 페이지네이션 -->
     <div id="pagination" class="d-flex justify-content-center my-4">
-        <!-- 페이지네이션 버튼은 jQuery에서 동적으로 추가됩니다 -->
     </div>
 </div>
 
