--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -74,7 +74,7 @@
                 <option value="name">이름순</option>
             </select>
             <div class="btn-group" role="group">
-                <button id="ascBtn" class="btn btn-outline-primary" data-order="asc">오름차순</button>
+                <button id="ascBtn" class="btn btn-outline-secondary" data-order="asc">오름차순</button>
                 <button id="descBtn" class="btn btn-outline-secondary" data-order="desc">내림차순</button>
             </div>
         </div>
