--- a/src/main/resources/templates/admin/admin_home.html
+++ b/src/main/resources/templates/admin/admin_home.html
@@ -1,63 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
-    <style>
-        html, body {
-            height: 100%; /* 화면 전체 높이 설정 */
-            margin: 0;
-        }
-        main {
-            height: 100%; /* 메인 컨테이너도 화면 전체 높이 */
-        }
-    </style>
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
 <main class="d-flex flex-nowrap">
-<div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-        <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        <span class="fs-4">Sidebar</span>
-    </a>
-    <hr>
-    <ul class="nav nav-pills flex-column mb-auto">
-        <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">
-                Home
-            </a>
-        </li>
-        <li>
-            <a href="#" class="nav-link text-white">
-                상품 관리
-            </a>
-        </li>
-        <li>
-            <a href="#" class="nav-link text-white">
-                주문 관리
-            </a>
-        </li>
-        <li>
-            <a href="#" class="nav-link text-white">
-                게시글 관리
-            </a>
-        </li>
-        <li>
-            <a href="#" class="nav-link text-white">
-                유저 관리
-            </a>
-        </li>
-    </ul>
-    <hr>
-    <div>
-        <a href="/" class="nav-link text-white">
-            관리자 페이지 나가기
-        </a>
-    </div>
+{{> admin/sidebar }}
+<!-- 본문 영역 -->
+<div class="container-fluid p-4">
+
 </div>
 </main>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
