--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -9,12 +9,12 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">
+            <a href="/admin/home" class="nav-link active" aria-current="page">
                 Home
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link text-white">
+            <a href="/admin/product" class="nav-link text-white">
                 상품 관리
             </a>
         </li>
@@ -42,4 +42,19 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+<script>
+    // 모든 링크를 선택합니다.
+    const links = document.querySelectorAll('.nav-link');
+
+    // 각 링크에 클릭 이벤트를 추가합니다.
+    links.forEach(link => {
+        link.addEventListener('click', (event) => {
+            // 모든 링크에서 'active' 클래스 제거
+            links.forEach(l => l.classList.remove('active'));
+
+            // 클릭된 링크에 'active' 클래스 추가
+            link.classList.add('active');
+        });
+    });
+</script>
 
