250121 관리자 페이지 사이드바

--- a/src/main/resources/static/css/admin/sidebar.css
+++ b/src/main/resources/static/css/admin/sidebar.css
@@ -1,7 +1,5 @@
 html, body {
     height: 100%; /* 화면 전체 높이 설정 */
     margin: 0;
-}
-main {
-    height: 100%; /* 메인 컨테이너도 화면 전체 높이 */
+    display: flex;
 }
