--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -1,6 +1,5 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/admin/sidebar.css">
-<body>
 <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
@@ -9,7 +8,7 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a href="/admin/home" class="nav-link active" aria-current="page">
+            <a href="/admin/home" class="nav-link text-white">
                 Home
             </a>
         </li>
@@ -46,9 +45,17 @@
     // 모든 링크를 선택합니다.
     const links = document.querySelectorAll('.nav-link');
 
+    // 페이지 로드 시 현재 URL 경로에 해당하는 링크에 'active' 클래스를 추가합니다.
+    const currentPath = window.location.pathname;
+    links.forEach(link => {
+        if (link.getAttribute('href') === currentPath) {
+            link.classList.add('active');
+        }
+    });
+
     // 각 링크에 클릭 이벤트를 추가합니다.
     links.forEach(link => {
-        link.addEventListener('click', (event) => {
+        link.addEventListener('click', () => {
             // 모든 링크에서 'active' 클래스 제거
             links.forEach(l => l.classList.remove('active'));
 
