250121 관리자 페이지 홈

--- a/src/main/resources/templates/admin/admin_home.html
+++ b/src/main/resources/templates/admin/admin_home.html
@@ -8,9 +8,9 @@
 <main class="d-flex flex-nowrap">
 {{> admin/sidebar }}
 <!-- 본문 영역 -->
-<div class="container-fluid p-4">
-
-</div>
+    <div class="container-fluid p-4">
+        여기는 관리자 홈
+    </div>
 </main>
 </body>
 </html>
