--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -12,25 +12,53 @@
                 Home
             </a>
         </li>
-        <li>
-            <a href="/admin/product" class="nav-link text-white">
+        <li class="mb-1">
+            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#product-collapse">
                 상품 관리
-            </a>
+            </button>
+            <div class="collapse" id="product-collapse">
+                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 보기</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 등록</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 수정</a></li>
+                </ul>
+            </div>
         </li>
-        <li>
-            <a href="#" class="nav-link text-white">
+        <li class="mb-1">
+            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#order-collapse">
                 주문 관리
-            </a>
+            </button>
+            <div class="collapse" id="order-collapse">
+                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">3</a></li>
+                </ul>
+            </div>
         </li>
-        <li>
-            <a href="#" class="nav-link text-white">
+        <li class="mb-1">
+            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#board-collapse">
                 게시글 관리
-            </a>
+            </button>
+            <div class="collapse" id="board-collapse">
+                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">3</a></li>
+                </ul>
+            </div>
         </li>
-        <li>
-            <a href="#" class="nav-link text-white">
-                유저 관리
-            </a>
+        <li class="mb-1">
+            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#user-collapse">
+                회원 관리
+            </button>
+            <div class="collapse" id="user-collapse">
+                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">모든 회원 보기</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
+                </ul>
+            </div>
         </li>
     </ul>
     <hr>
@@ -41,27 +69,4 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-<script>
-    // 모든 링크를 선택합니다.
-    const links = document.querySelectorAll('.nav-link');
-
-    // 페이지 로드 시 현재 URL 경로에 해당하는 링크에 'active' 클래스를 추가합니다.
-    const currentPath = window.location.pathname;
-    links.forEach(link => {
-        if (link.getAttribute('href') === currentPath) {
-            link.classList.add('active');
-        }
-    });
-
-    // 각 링크에 클릭 이벤트를 추가합니다.
-    links.forEach(link => {
-        link.addEventListener('click', () => {
-            // 모든 링크에서 'active' 클래스 제거
-            links.forEach(l => l.classList.remove('active'));
-
-            // 클릭된 링크에 'active' 클래스 추가
-            link.classList.add('active');
-        });
-    });
-</script>
 
