250121 admin 상품관리 화면 url 요청 경로 수정

--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -18,9 +18,9 @@
             </button>
             <div class="collapse" id="product-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 보기</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 등록</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 수정</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 보기</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product/add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 등록</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/product/modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">상품 수정</a></li>
                 </ul>
             </div>
         </li>
