--- a/src/main/resources/templates/admin/product/product_add_admin.html
+++ b/src/main/resources/templates/admin/product/product_add_admin.html
@@ -23,7 +23,7 @@
     <!-- 카테고리 -->
     <div class="mb-3">
         <label for="category" class="form-label">카테고리</label>
-        <select class="form-select" id="category" name="category" required>
+        <select class="form-select" id="category" name="category">
             <option value="" selected disabled>카테고리를 선택하세요</option>
             <option value="꽃다발">꽃다발</option>
             <option value="꽃바구니">꽃바구니</option>
@@ -38,31 +38,31 @@
     <!-- 상품명 -->
     <div class="mb-3">
         <label for="name" class="form-label">상품명</label>
-        <input type="text" class="form-control" id="name" name="name" placeholder="상품명을 입력하세요" required>
+        <input type="text" class="form-control" id="name" name="name" placeholder="상품명을 입력하세요">
     </div>
 
     <!-- 가격 -->
     <div class="mb-3">
         <label for="price" class="form-label">가격</label>
-        <input type="number" class="form-control" id="price" name="price" placeholder="가격을 입력하세요" required>
+        <input type="number" class="form-control" id="price" name="price" placeholder="가격을 입력하세요">
     </div>
 
     <!-- 사이즈 -->
     <div class="mb-3">
         <label for="size" class="form-label">사이즈</label>
-        <input type="text" class="form-control" id="size" name="size" placeholder="상품 크기를 입력하세요" required>
+        <input type="text" class="form-control" id="size" name="size" placeholder="상품 크기를 입력하세요">
     </div>
 
     <!-- 이미지 URL -->
     <div class="mb-3">
         <label for="imageUrl" class="form-label">이미지</label>
-        <input type="file" class="form-control" id="imageUrl" name="imageUrl" accept="image/*" required>
+        <input type="file" class="form-control" id="imageUrl" name="imageUrl" accept="image/*">
     </div>
 
     <!-- 설명 -->
     <div class="mb-3">
         <label for="description" class="form-label">상품 설명</label>
-        <textarea class="form-control" id="description" name="description" rows="4" placeholder="상품 설명을 입력하세요" required></textarea>
+        <textarea class="form-control" id="description" name="description" rows="4" placeholder="상품 설명을 입력하세요"></textarea>
     </div>
 
     <!-- 버튼 -->
