250122 타이틀 수정

--- a/src/main/resources/templates/admin/product/product_list_admin.html
+++ b/src/main/resources/templates/admin/product/product_list_admin.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>상품관리 페이지</title>
+    <title>상품 관리</title>
     <style>
         html, body {
             width: 100%; /* 페이지 전체 폭 차지 */
@@ -18,7 +18,7 @@
     </style>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
-<script src="/js/product/productList.js"></script>
+<script src="/js/admin/product/productListAdmin.js"></script>
 <body>
 {{> admin/sidebar }}
 <div class="main-content">
