250123 이미지 파일 추가란에 경고문구 추가
이미지 파일을 추가하지 않은경우 경고문구 추가

--- a/src/main/resources/templates/admin/product/product_add_admin.html
+++ b/src/main/resources/templates/admin/product/product_add_admin.html
@@ -57,6 +57,8 @@
     <div class="mb-3">
         <label for="imageUrl" class="form-label">이미지</label>
         <input type="file" class="form-control" id="imageUrl" name="imageUrl" accept="image/*">
+        <!-- 안내 문구 추가 -->
+        <span id="imageUrl-warning" style="color: red;">이미지를 첨부하세요</span>
     </div>
 
     <!-- 설명 -->
