--- a/src/main/resources/templates/admin/product/product_modify_admin.html
+++ b/src/main/resources/templates/admin/product/product_modify_admin.html
@@ -20,13 +20,12 @@
     <h1 class="text-center mb-4">상품 수정</h1>
     <!-- 상품 ID -->
     <div class="mb-3">
-        <label for="product-id" class="form-label">상품 ID</label>
-        <input type="text" class="form-control" id="product-id" name="product-id" placeholder="상품 ID를 입력하세요">
+        <h2 id="product-id">상품 ID: </h2>
     </div>
     <!-- 카테고리 -->
     <div class="mb-3">
         <label for="category" class="form-label">카테고리</label>
-        <select class="form-select" id="category" name="category" required>
+        <select class="form-select" id="category" name="category">
             <option value="" selected disabled>카테고리를 선택하세요</option>
             <option value="꽃다발">꽃다발</option>
             <option value="꽃바구니">꽃바구니</option>
@@ -60,6 +59,8 @@
     <div class="mb-3">
         <label for="imageUrl" class="form-label">이미지</label>
         <input type="file" class="form-control" id="imageUrl" name="imageUrl" accept="image/*">
+        <!-- 안내 문구 추가 -->
+        <span id="imageUrl-warning" style="color: red;">이미지를 첨부하세요</span>
     </div>
 
     <!-- 설명 -->
@@ -70,8 +71,8 @@
 
     <!-- 버튼 -->
     <div class="d-flex justify-content-between">
-        <button class="btn btn-primary" onclick="registerProduct()">등록하기</button>
-        <a href="/admin/product-list" class="btn btn-secondary">취소</a>
+        <button class="btn btn-primary" onclick="modifyProduct()">수정</button>
+        <a href="/admin/product/list" class="btn btn-secondary">취소</a>
     </div>
 </div>
 </body>
