250123 관리자 페이지 상품리스트 상품 ID 순서 정렬 추가

--- a/src/main/resources/templates/admin/product/product_list_admin.html
+++ b/src/main/resources/templates/admin/product/product_list_admin.html
@@ -55,6 +55,7 @@
             <div class="col-md-6 d-flex justify-content-end">
                 <label for="sort" class="form-label me-2">정렬 기준</label>
                 <select id="sort" class="form-select w-auto">
+                    <option value="id">상품 ID</option>
                     <option value="price">가격순</option>
                     <option value="name">이름순</option>
                 </select>
