--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -94,6 +94,31 @@
     <!-- 페이지네이션 -->
     <div id="pagination" class="d-flex justify-content-center my-4">
     </div>
+
+    <!-- 상품 상세 정보 모달 예시 -->
+    <div class="modal fade" id="productDetailModal" tabindex="-1" aria-labelledby="productDetailModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="productDetailModalLabel">상품 상세 정보</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img id="product-image" src="" alt="상품 이미지" class="img-fluid mb-3">
+                    <h5 id="product-name">상품명</h5>
+                    <p id="product-description">상품 설명</p>
+                    <p id="product-price">₩0</p>
+                    <p>사이즈: <span id="product-size"></span></p>
+                    <!-- 장바구니 담기 버튼 -->
+                    <button class="btn btn-primary" id="addToCartBtn">장바구니에 담기</button>
+                    <!-- 주문하기 버튼 -->
+                    <button class="btn btn-success" id="orderNowBtn">바로 주문하기</button>
+                </div>
+            </div>
+        </div>
+</div>
+
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
