250123 view layout(navbar, sidebar) common 폴더로 통합

--- a/src/main/resources/templates/admin/admin_home.html
+++ b/src/main/resources/templates/admin/admin_home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <main class="d-flex flex-nowrap">
-{{> admin/sidebar }}
+{{> common/sidebar }}
 <!-- 본문 영역 -->
     <div class="container-fluid p-4">
         여기는 관리자 홈
