--- a/src/main/resources/templates/admin/product/product_add_admin.html
+++ b/src/main/resources/templates/admin/product/product_add_admin.html
@@ -17,7 +17,7 @@
     <script src="/js/admin/product/productAddAdmin.js"></script>
 </head>
 <body>
-{{> admin/sidebar }}
+{{> common/sidebar }}
 <div class="container mt-5">
     <h1 class="text-center mb-4">상품 등록</h1>
     <!-- 카테고리 -->
