--- a/src/main/resources/templates/admin/product/product_list_admin.html
+++ b/src/main/resources/templates/admin/product/product_list_admin.html
@@ -20,7 +20,7 @@
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/admin/product/productListAdmin.js"></script>
 <body>
-{{> admin/sidebar }}
+{{> common/sidebar }}
 <div class="main-content">
     <!-- 본문 영역 -->
     <div class="container my-5">
