--- a/src/main/resources/templates/admin/product/product_modify_admin.html
+++ b/src/main/resources/templates/admin/product/product_modify_admin.html
@@ -15,7 +15,7 @@
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/admin/product/productModifyAdmin.js"></script>
 <body>
-{{> admin/sidebar }}
+{{> common/sidebar }}
 <div class="container mt-5">
     <h1 class="text-center mb-4">상품 수정</h1>
     <!-- 상품 ID -->
