--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -1,7 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/admin/sidebar.css">
 <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+    <a href="/static" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
         <span class="fs-4">Sidebar</span>
     </a>
@@ -62,7 +62,7 @@
     </ul>
     <hr>
     <div>
-        <a href="/" class="nav-link text-white">
+        <a href="/static" class="nav-link text-white">
             관리자 페이지 나가기
         </a>
     </div>
