--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -4,40 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품 보기</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/product/productList.js"></script>
 <body>
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <div class="col-md-3 mb-2 mb-md-0">
-        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-            <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-    </div>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="/product" class="nav-link px-2">상품 보기</a></li>
-        <li><a href="#" class="nav-link px-2">2</a></li>
-        <li><a href="#" class="nav-link px-2">3</a></li>
-        <li><a href="#" class="nav-link px-2">4</a></li>
-    </ul>
-
-    <div class="d-flex align-items-center flex-wrap">
-        {{#login_user}}
-        <span class="me-3">{{login_user.name}}님, 환영합니다!</span>
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/logout';">로그아웃</button>
-        <button type="button" class="btn btn-outline-primary" onclick="window.location.href='/user/change-password';">비밀번호 변경</button>
-        {{/login_user}}
-
-        {{^login_user}}
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/login';">로그인</button>
-        <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/user/register';">회원가입</button>
-        {{/login_user}}
-    </div>
-</header>
-
+{{> common/navbar }}
 <div class="container my-5">
 
     <!-- 검색창 -->
@@ -96,7 +67,8 @@
     </div>
 
     <!-- 상품 상세 정보 모달 예시 -->
-    <div class="modal fade" id="productDetailModal" tabindex="-1" aria-labelledby="productDetailModalLabel" aria-hidden="true">
+    <div class="modal fade" id="productDetailModal" tabindex="-1" aria-labelledby="productDetailModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -116,11 +88,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </div>
-
-
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
