250123 관리자페이지 나가기 경로 수정

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -62,7 +62,7 @@
     </ul>
     <hr>
     <div>
-        <a href="/static" class="nav-link text-white">
+        <a href="/" class="nav-link text-white">
             관리자 페이지 나가기
         </a>
     </div>
