250123 장바구니 저장 API
cart_tbl 데이터 저장 API 만들기

--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -7,7 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>장바구니</title>
 </head>
+<script src="/js/cart/cartList.js"></script>
 <body>
+<!-- 장바구니 목록 -->
+<div id="cart-items">
+    <!-- 장바구니 아이템 목록이 여기에 동적으로 추가됩니다 -->
+</div>
 
+<!-- 결제 진행 버튼 -->
+<button class="btn btn-success" id="checkoutBtn">결제 진행</button>
 </body>
 </html>
