--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -81,6 +81,8 @@
                     <p id="product-description">상품 설명</p>
                     <p id="product-price">₩0</p>
                     <p>사이즈: <span id="product-size"></span></p>
+                    <label for="quantityInput">구매 수량 :</label>
+                    <input type="number" id="quantityInput" value="1" min="1" max="100" step="1">
                     <!-- 장바구니 담기 버튼 -->
                     <button class="btn btn-primary" id="addToCartBtn">장바구니에 담기</button>
                     <!-- 주문하기 버튼 -->
