250123 장바구니 list 화면 출력

--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>장바구니</title>
 </head>
+<script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/cart/cartList.js"></script>
 <body>
+{{> common/navbar }}
 <!-- 장바구니 목록 -->
 <div id="cart-items">
     <!-- 장바구니 아이템 목록이 여기에 동적으로 추가됩니다 -->
