--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -50,6 +50,6 @@
 </div>
 
 <!-- 결제 진행 버튼 -->
-<button class="btn btn-success" id="checkoutBtn">결제 진행</button>
+<button class="btn btn-success" onclick="checkout();">결제 진행</button>
 </body>
 </html>
