250124 결제 요약 창 업데이트

--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -42,8 +42,9 @@
     <!-- 결제 요약 및 계산 영역 -->
     <div class="summary-section">
         <h2>결제 요약</h2>
-        <div id="order-summary">
+        <div id="order-summary" class="mb-3">
         </div>
+        <div id="total-price"></div>
         <!-- 결제 진행 버튼 -->
         <button class="btn btn-success" onclick="checkout();">결제 진행</button>
     </div>
