--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -84,9 +84,7 @@
                     <label for="quantityInput">구매 수량 :</label>
                     <input type="number" id="quantityInput" value="1" min="1" max="100" step="1">
                     <!-- 장바구니 담기 버튼 -->
-                    <button class="btn btn-primary" id="addToCartBtn">장바구니에 담기</button>
-                    <!-- 주문하기 버튼 -->
-                    <button class="btn btn-success" id="orderNowBtn">바로 주문하기</button>
+                    <button class="btn btn-success" id="addToCartBtn">장바구니에 담기</button>
                 </div>
             </div>
         </div>
