250125 결제 화면창 업데이트

--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -27,6 +27,7 @@
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/cart/cartList.js"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <body>
 {{> common/navbar }}
 <div class="container">
