250126 장바구니에서 주문 신청 API 업데이트

--- a/src/main/resources/templates/cart/cart_list.html
+++ b/src/main/resources/templates/cart/cart_list.html
@@ -51,12 +51,12 @@
 </div>
 
 <!-- 주문 등록 모달 -->
-<div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
+<div class="modal fade" id="order-regist-modal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <!-- 모달 헤더 -->
             <div class="modal-header">
-                <h5 class="modal-title" id="checkoutModalLabel">결제 진행</h5>
+                <h5 class="modal-title" id="checkoutModalLabel">주문 신청</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
@@ -120,7 +120,7 @@
             <!-- 모달 푸터 -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                <button type="button" class="btn btn-primary" id="confirmCheckout">결제 진행</button>
+                <button type="button" class="btn btn-primary" id="order-regist">주문 신청</button>
             </div>
         </div>
     </div>
