250203 관리자 페이지 주문 관리 초안

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -24,16 +24,9 @@
             </div>
         </li>
         <li class="mb-1">
-            <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#order-collapse">
+            <a href="/admin/order/list" class="nav-link text-white">
                 주문 관리
-            </button>
-            <div class="collapse" id="order-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">3</a></li>
-                </ul>
-            </div>
+            </a>
         </li>
         <li class="mb-1">
             <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed text-white" data-bs-toggle="collapse" data-bs-target="#board-collapse">
