250204 관리자 페이지 회원 관리 초안

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -46,7 +46,7 @@
             </button>
             <div class="collapse" id="user-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">모든 회원 보기</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/user/all-users" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">모든 회원 보기</a></li>
                     <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
                     <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
                 </ul>
