250204 관리자 페이지 주문 관리 화면 업데이트
오타수정

--- a/src/main/resources/templates/admin/order/order_list_admin.html
+++ b/src/main/resources/templates/admin/order/order_list_admin.html
@@ -10,7 +10,7 @@
             margin: 0; /* 기본 margin 제거 */
             padding: 0; /* 기본 padding 제거 */
         }
-        .container {
+        #container {
             margin-left: 50px;
             flex-grow: 1;
             overflow-y: auto; /* 내용이 넘치면 스크롤 */
@@ -30,7 +30,7 @@
 <script src="/js/admin/order/orderListAdmin.js"></script>
 <body>
 {{> common/sidebar }}
-<div id=container" class="container mt-5">
+<div id="container" class="container mt-5">
     <div id="header-container" class="text-center">
         <h1>주문 관리</h1>
     </div>
