250205 회원 계정 탈퇴 처리 및 마이페이지 초안

--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -19,6 +19,7 @@
         <span class="me-3">{{name}}님, 환영합니다!</span>
         <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='/logout';">로그아웃</button>
         <button type="button" class="btn btn-outline-primary" onclick="window.location.href='/user/change-password';">비밀번호 변경</button>
+        <button type="button" class="btn btn-outline-primary" onclick="window.location.href='/user/mypage';">마이 페이지</button>
         {{/login_user}}
 
         {{^login_user}}
