250208 상품 인기순 정렬 추가

--- a/src/main/resources/templates/product/product_list.html
+++ b/src/main/resources/templates/product/product_list.html
@@ -43,6 +43,7 @@
             <select id="sort" class="form-select w-auto">
                 <option value="price">가격순</option>
                 <option value="name">이름순</option>
+                <option value="popularity">인기순</option>
             </select>
             <div class="btn-group" role="group">
                 <button id="ascBtn" class="btn btn-outline-secondary" data-order="asc">오름차순</button>
