250209 레이아웃 변경
container-fluid 로 변경

--- a/src/main/resources/templates/admin/product/product_list_admin.html
+++ b/src/main/resources/templates/admin/product/product_list_admin.html
@@ -23,7 +23,7 @@
 {{> common/sidebar }}
 <div class="main-content">
     <!-- 본문 영역 -->
-    <div class="container my-5">
+    <div class="container-fluid my-5">
 
         <!-- 검색창 -->
         <div class="row mb-4">
