--- a/src/main/resources/templates/admin/user/all_users.html
+++ b/src/main/resources/templates/admin/user/all_users.html
@@ -28,7 +28,7 @@
 <script src="/js/admin/user/allUsers.js"></script>
 <body>
 {{> common/sidebar }}
-<div id="container" class="container mt-5">
+<div id="container" class="container-fluid mt-5">
     <div id="header-container" class="text-center">
         <h1>모든 회원 관리</h1>
     </div>
