--- a/src/main/resources/templates/admin/order/order_list_admin.html
+++ b/src/main/resources/templates/admin/order/order_list_admin.html
@@ -30,7 +30,7 @@
 <script src="/js/admin/order/orderListAdmin.js"></script>
 <body>
 {{> common/sidebar }}
-<div id="container" class="container mt-5">
+<div id="container" class="container-fluid mt-5">
     <div id="header-container" class="text-center">
         <h1>주문 관리</h1>
     </div>
