250210 고객센터 문의 게시글 view API 업데이트

--- a/src/main/resources/templates/support/support_list.html
+++ b/src/main/resources/templates/support/support_list.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>문의 게시판</title>
+    <style>
+        .cursor-pointer {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/support/supportList.js"></script>
