250212 고객센터 게시글 댓글 등록 API

--- a/src/main/resources/templates/support/support_view.html
+++ b/src/main/resources/templates/support/support_view.html
@@ -30,12 +30,12 @@
         <div class="mt-4">
             <h6>댓글 작성</h6>
             <div class="mb-1">
-                <label for="author_name"></label>
-                <input type="text" class="form-control" id="author_name" name="author_name" placeholder="작성자 이름" required>
+                <label for="comment-author-name"></label>
+                <input type="text" class="form-control" id="comment-author-name" placeholder="작성자 이름" required>
             </div>
             <div class="mb-1">
-                <label for="comment_content"></label>
-                <textarea class="form-control" id="comment_content" name="comment_content" placeholder="댓글을 작성하세요" required></textarea>
+                <label for="comment-content"></label>
+                <textarea class="form-control" id="comment-content" placeholder="댓글을 작성하세요" required></textarea>
             </div>
             <button class="btn btn-primary" onclick="commentRegister()">댓글 작성</button>
         </div>
